--- a/css/floats.css
+++ b/css/floats.css
@@ -31,10 +31,23 @@ a {
 }
 
 [class*="col-"] {
-  widows: 92%;
+  width: 92%;
   margin-left: 4%;
   margin-right: 4%;
   min-height: 1px;
+}
+.col-1-2,
+.col-1-4 {
+  background-color: #ffc;
+}
+.col-2 {
+  background-color: #fcf;
+}
+.col-3 {
+  background-color: #cff;
+}
+.col-4 {
+  background-color: #ccf;
 }
 
 div img {
@@ -46,7 +59,36 @@ div img {
 
 /* Mobile Landscape Screen Sizes */
 @media only screen and (min-width: 480px) {
+  [class*="col-"] {
+    float: left;
+    margin-right: 0;
+    min-height: 1px;
+  }
+
+  .col-1-2,
+  .col-1-4 {
+    width: 44%;
+  }
+
+  .col-1-4,
+  .col-3 {
+    width: 92%;
+  }
 }
 /* Desktop screen Sizes */
 @media only screen and (min-width: 768px) {
+  .col-1-2,
+  .col-1-4 {
+    width: 20%;
+  }
+
+  .col-2 {
+    width: 44%;
+  }
+  .col-3 {
+    width: 68%;
+  }
+  .col-4 {
+    width: 92%;
+  }
 }
