--- a/css/boxes.css
+++ b/css/boxes.css
@@ -8,6 +8,7 @@ ul {
   border: 1px dotted red;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 li {
   border: 1px solid #999;
