--- a/css/boxes.css
+++ b/css/boxes.css
@@ -21,3 +21,8 @@ li {
   flex-direction: column;
   align-items: center;
 }
+.row {
+  display: flex;
+  flex-direction: row;
+  align-items: left;
+}
